Version 1.2.2:

Announcements:
1. CommentGenerator interface has changed

Bugs:
1. Fixed NPE when no DAOs are generated
2. Fixed IBATIS-579 - don't allow column names with spaces to break
   across lines
3. Fixed NPE and incorrect calculation in generated equals when certain
   fields are null - thanks to Benjamin Klatt for finding this bug

Enhancements:
1. IBATIS-569 - Make it easier to override IbatorRules in plugins
2. IBATIS-571 - Added "autoDelimitKeywords" support to <ibatorContext>
3. IBATIS-577 - Define SQL fragments for column lists.  Thanks to Iwao
   AVE! for the idea and the initial patch
4. Added some additional command line arguments
5. Added logging
6. Added Case Insensitive LIKE example Plugin
7. Added delimitAllCoumns to table configurations
8. Added page describing some of PostgreSQL idiosyncracies with Ibator
9. IBATIS-586 - Added the ability to specify nested property elements on
   columnOverrides (thanks to Dan Turkenkopf for the idea and a nice initial patch)
10. Gather column comments during introspection
11. IBATIS-592 - Additional attributes for SqlMaps
12. Fixed addCriterionfor JDBC* methods so that they all do a null check
13. Fixed IbatorRunner so that configuration errors are shown (thanks to Karel Rank)

-------------------------------------------------------------------------------
Version 1.2.1:

Bugs:
1. Fixed IbatorObjectFactory so that it will find internal classes on the
   context classloader.
2. Fixed IBATIS-565 - ill formed comment in the SqlMapConfigPlugin.

Enhancements:
1. Modified plugin methods for model fields, getters, and setters so that
   the plugin will know which type of class (Primary Key, Base Record, or
   Record with BLOBs) is being generated. 
2. Added methods to IntrospectedTable to get/set attributes.  This 
   allows plugin classes to maintain table based state between
   plugin calls.
3. Added "initialized" method to the plugin API.  This