@@ -53,7 +53,7 @@
   <li>Fixed NPE and incorrect calculation in generated equals method
       (from EqualsHashCodePlugin) when certain
       fields are null - thanks to Benjamin Klatt for finding this bug.</li>
-
+  <li>IBATIS-601 - improper validation of &lt;generatedKey&gt;</li>
 </ul>
 
 <h3>Enhancements</h3>
