@@ -1,22 +1,26 @@
 ValidationError.0=JavaModelGenerator Target Project is Required for context {0}
 ValidationError.1=SQLMapGenerator Target Project is Required for context {0}
 ValidationError.2=DAOGenerator Target Project is Required for context {0}
-ValidationError.3=No Tables Specified
+ValidationError.3=No Tables Specified for context {0}
 ValidationError.4=JDBC Driver Class Must Be Specified
 ValidationError.5=JDBC Connection URL Must Be Specified
 ValidationError.6=Missing table name in table configuration at index {0}
 ValidationError.7=SQL Statement is required if a generated key is specified in table configuration for table {0}
-ValidationError.8=JavaModelGeneratorConfiguration is required
-ValidationError.9=SqlMapGeneratorConfiguration is required
-ValidationError.10=JdbcConnectionConfiguration is required
+ValidationError.8=JavaModelGeneratorConfiguration is required for context {0}
+ValidationError.9=SqlMapGeneratorConfiguration is required for context {0}
+ValidationError.10=JdbcConnectionConfiguration is required for context {0}
 ValidationError.11=At least one IbatorConfiguration element is required
 ValidationError.12={0} Target Package is Required for context {1}
 ValidationError.13=If "useColumnIndexes" property is set, then either both or neither query id must be set for table {0}
-ValidationError.14="searchString" is required in a ColumnRenamingRule
+ValidationError.14="searchString" is required for ColumnRenamingRule in table {0}
 ValidationError.15=Generated key type must be either "pre" or "post" if the type is specified for a generated key for table {0}
 ValidationError.16="id" is required in an IbatorContext
 ValidationError.17="type" is required in an IbatorPlugin in context {0}
 ValidationError.18={0} requires the {1} property
+ValidationError.19=A null or empty string is not allowed for a classpath entry
+ValidationError.20="type" is required for DAO Generator in context {0}
+ValidationError.21="column" is required for <ignoredColumn> in table {0}
+ValidationError.22="column" is required for <columnOverride> in table {0}
 
 RuntimeError.0=configfile is a required parameter
 RuntimeError.1=configfile {0} does not exist
@@ -88,11 +92,11 @@ Tracing.2=Found column "{0}", data type {1}, in table "{2}"
 Tracing.3=Removing column "{0}" in table "{1}" because it is ignored by configuration
 Tracing.4=Found override for column "{0}" in table "{1}"
 
-Usage.Lines=26
+Usage.Lines=28
 Usage.0=Apache iBATIS Ibator - a code generator for iBATIS.  Usage:
 Usage.1=\   java -jar ibator.jar -configfile file_name [-overwrite]
 Usage.2=\                        [-contextids ids] [-tables tableNames]
-Usage.3=\                        [-forceJavaLogging] [-verbose]
+Usage.3=\                        [-forceJavaLogging] [-verbose] [-?|-h]
 Usage.4=
 Usage.5=Where:
 Usage.6=\   -configfile: Specifies the the Ibator XML configuration file (required)
@@ -111,7 +115,9 @@ Usage.18=\            names must be fully qualified (e.g. schema.tablename).  Ta
 Usage.19=\            must exactly match the case specified in the configuration file.
 Usage.20=
 Usage.21=\   -forceJavaLogging: Used to force Ibator to use standard Java logging even if
-Usage.22=\                      Log4J is available in the runtime classpath.  Ibator normally
-Usage.23=\                      will use Log4J if it is available at runtime.
+Usage.22=\                      Log4J is available in the runtime classpath.  Ibator
+Usage.23=\                      normally will use Log4J if it is available at runtime.
 Usage.24=
 Usage.25=\   -verbose: If specified, Ibator will write progress messages to the console.
+Usage.26=
+Usage.27=\   -?|-h: Display this help text and exit.
